一些乱七八糟的单子

--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,7 @@ optimizations/data.csv
 data.csv
 chromedriver
 spider-feapder/setting.py
+*.csv
+spider-feapder/spiders/test.py
+spider-feapder/test.py
+*.jpg
